<resources>
    <string name="app_name">My Application</string>
    <string name="tv_num1">Number 01</string>
    <string name="tv_num2">Number 02</string>
    <string name="t_num1" />
    <string name="t_num2" />
    <string name="btn_ok">OK</string>
    <string name="tv_answer" />
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_multi">*</string>
    <string name="btn_divi">%</string>
    <string name="btn_div">/</string>
    <string name="te_calculater">Opening Calculator</string>
    <string name="b1">Play</string>
    <string name="bpause">Pause</string>
    <string name="bstop">Stop</string>
    <string name="buttonim">Capture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>