<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutorial_03">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="130dp"
        android:layout_height="33dp"
        android:hint="@string/tv_num1"
        android:text="@string/tv_num1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="130dp"
        android:layout_height="33dp"
        android:hint="@string/tv_num2"
        android:text="@string/tv_num2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <EditText
        android:id="@+id/t_num1"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/t_num1"
        android:inputType="number"
        android:text="@string/t_num1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/tv_num1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/t_num2"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/t_num2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/tv_num1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="183dp"
        android:layout_height="59dp"
        android:layout_marginBottom="316dp"
        android:backgroundTint="#02D8F4"
        android:onClick="openSecond"
        android:text="@string/btn_ok"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_num2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>