<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaPlayer">

    <Button
        android:id="@+id/b1"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:hint="@string/b1"
        android:onClick="play"
        android:text="@string/b1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bpause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bstop"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:hint="@string/bstop"
        android:onClick="stop"
        android:text="@string/bstop"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bpause"
        app:layout_constraintVertical_bias="0.413" />

    <Button
        android:id="@+id/bpause"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:layout_marginTop="312dp"
        android:hint="@string/bpause"
        android:onClick="pause"
        android:text="@string/bpause"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>